add eslint rules

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "predev": "rimraf ./public/_redirects",
     "dev": "remix dev",
     "start": "netlify serve",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "lint": "eslint ./**/*.{ts,tsx}"
   },
   "dependencies": {
     "@netlify/functions": "^1.3.0",
