--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "remix dev",
     "start": "netlify serve",
     "typecheck": "tsc -b",
-    "lint": "eslint ./**/*.{ts,tsx}"
+    "lint": "eslint ./**/*.{ts,tsx}",
+    "format": "eslint --fix ./**/*.{ts,tsx}"
   },
   "dependencies": {
     "@netlify/functions": "^1.3.0",
