--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "netlify serve",
     "typecheck": "tsc -b",
     "lint": "eslint ./**/*.{ts,tsx}",
-    "format": "eslint --fix ./**/*.{ts,tsx}"
+    "format": "eslint --fix ./**/*.{ts,tsx}",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@netlify/functions": "^1.3.0",
@@ -28,7 +29,8 @@
     "eslint": "^8.27.0",
     "rimraf": "^4.1.4",
     "tailwindcss": "^3.3.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "husky": "^8.0.0"
   },
   "engines": {
     "node": ">=14"
