--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@netlify/functions": "^1.3.0",
     "@remix-run/netlify": "^1.15.0",
     "@remix-run/node": "^1.15.0",
@@ -27,10 +28,10 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "husky": "^8.0.0",
     "rimraf": "^4.1.4",
     "tailwindcss": "^3.3.1",
-    "typescript": "^4.8.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
