modify eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,4 @@
-/** @type {import('eslint').Linter.Config} */
-module.exports = {
-  extends: ["@remix-run/eslint-config", "@remix-run/eslint-config/node"],
+{
   "overrides": [
     {
       "extends": [
@@ -12,23 +10,17 @@ module.exports = {
       }
     }
   ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "ignorePatterns": ["*.config.js"],
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
+  "extends": ["plugin:@typescript-eslint/recommended"],
   "rules": {
-    "semi": "error",
-    "eol-last": "error",
-    "no-trailing-spaces": "error",
+    "prettier/prettier": "error",
     "@typescript-eslint/consistent-type-imports": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "import/order": [
-      "error",
-      { "newlines-between": "always", "alphabetize": { "order": "asc" } }
-    ],
-    "sort-imports": [
-      "error",
-      { "ignoreDeclarationSort": true, "ignoreCase": true }
-    ],
-    "functional/no-return-void": "off",
     "@typescript-eslint/no-misused-promises": [
       2,
       {
@@ -38,4 +30,4 @@ module.exports = {
       }
     ]
   }
-};
+}
