--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@remix-run/serve": "^1.15.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
     "rimraf": "^4.1.4",
     "tailwindcss": "^3.3.1",
