--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/react": "^1.15.0",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
