force client side render

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "disqus-react": "^1.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-utils": "^6.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.15.0",
