--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@remix-run/react": "^1.15.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.15.0",
@@ -27,6 +28,7 @@
     "@remix-run/serve": "^1.15.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.27.0",
